--- a/style.css
+++ b/style.css
@@ -10,14 +10,11 @@ body {
     color: #db9501;
 }
 
-.bg-0 {
-    background-color: #C05805;
-        color: #ffffff;  V
-}
+
 
 .bg-1 {
     background-color: #1abc9c;
-        color: #ffffff;
+    color: #ffffff;
 }
 
 .bg-2 {
@@ -30,17 +27,16 @@ body {
     color: #ffffff;
 }
 
-.bg-4 {
-    background-color: #1abc9c;
-    color: #ffffff;
-}
 
 /* First Page */
 
 
 /* Header */
 
-
+.bg-0 {
+    background-color: #C05805;
+    color: #ffffff;
+}
 
 
 
@@ -79,7 +75,10 @@ body {
 
 
 
-
+.bg-4 {
+    background-color: #6e6702;
+    color: #ffffff;
+}
 
 
 
