--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /* Global Color, use for entierly project */
 body {
     /* Bark */
-    color: #2e2300;
+    --color-Bark: #2e2300;
     /* Seaweed Green */
-    color: #6e6702;
+    --color-SeaweedGreen: #6e6702;
     /* Bronze */
-    color: #C05805;
+    --color-Bronze: #C05805;
     /* Goldenrod */
-    color: #db9501;
+    --color-Goldenrod: #db9501;
 }
 
 
@@ -38,45 +38,76 @@ body {
     color: #ffffff;
 }
 
+ul.ovale-navigation {
+    background-color: #C05805;
+}
 
+a.color-white-link {
+    color: #ffffff;
+    padding: 15px;
+    margin: 10px;
+    /* font-size: 10px;  */
+}
+/* Animation Image */
+/* .button-click img{
+background-image: url('image/Chienlangue&nonlanguepictoalt.png');
+height: 70px;
+width: 120px;
+}
+
+.button-click:hover img{
+background-image: url('image/Chien langue & non langue picto.png');
+height: 70px;
+width: 120px;
+} */
 
 /* Main */
 
-
-
-
-
-
-
-
-
-/* Section */
-
-
-
-
-
-
-
-
-
+/* Section 0 Présentation et histoire,
+de l'association */
 
 /* Article */
 
 
 
+/* Section 1 Résumer et objectif de l'association */
+
+/* Article */
 
 
 
+/* Section 2 Gallerie d'image */
+
+/* Article */
 
 
+/* Section 3 Contact */
+
+/* Bouton Primary Personnalisé */
+
+.btn-primary {
+    --bs-btn-color: #ffffff ;
+    --bs-btn-bg: var(--color-SeaweedGreen) ;
+    --bs-btn-border-color: none ;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--color-SeaweedGreen) ;
+    --bs-btn-hover-border-color: #6e6702 ;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: var(--color-Bronze) ;
+    --bs-btn-active-border-color: var(--color-SeaweedGreen);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--color-SeaweedGreen);
+    --bs-btn-disabled-border-color: var(--color-SeaweedGreen);
+}
 
 /* Footer */
 
 
 
 .bg-4 {
-    background-color: #6e6702;
+    background-color: #2e2300;
     color: #ffffff;
 }
 
@@ -98,11 +129,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: aqua;
+    background: #6e6702;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: aquamarine;
+    background: #C05805;
 }
 
 /*# sourceMappingURL=style.css.map */
