--- a/style.css
+++ b/style.css
@@ -159,18 +159,17 @@ a.color-white-link {
     margin: 10px;
     /* font-size: 10px;  */
 }
-/* Animation Image */
-/* .button-click img{
-background-image: url('image/Chienlangue&nonlanguepictoalt.png');
-height: 70px;
-width: 120px;
+/* Animation Image via JS */
+.button-click{
+background-image: url('image/Chien langue & non langue picto.png');
+display: none;
 }
 
-.button-click:hover img{
+/* .button-click:hover img{
 background-image: url('image/Chien langue & non langue picto.png');
 height: 70px;
 width: 120px;
-} */
+}  */
 
 /* Main */
 
