--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #0d6efd;
-    /* --bs-primary: #6e6702; */
+    /* --bs-primary: #0d6efd; */
+    --bs-primary: var(--color-SeaweedGreen) ;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
@@ -32,7 +32,7 @@
     --bs-danger: #dc3545;
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
-    --bs-primary-rgb: 13, 110, 253;
+    --bs-primary-rgb: 10, 103, 2;
     --bs-secondary-rgb: 108, 117, 125;
     --bs-success-rgb: 25, 135, 84;
     --bs-info-rgb: 13, 202, 240;
@@ -119,6 +119,15 @@
     --bs-breakpoint-lg: 992px;
     --bs-breakpoint-xl: 1200px;
     --bs-breakpoint-xxl: 1400px;
+    /* Bark */
+    --color-Bark: #2e2300;
+    /* Seaweed Green */
+    --color-SeaweedGreen: #6e6702;
+    /* Bronze */
+    --color-Bronze: #C05805;
+    /* Goldenrod */
+    --color-Goldenrod: #db9501;
+
 }
 
 /* Global Color, use for entierly project */
@@ -213,15 +222,15 @@ de l'association */
 }
 /* Bouton Primary Personnalisé */
 
-.btn-primary {
-    --bs-btn-color: #ffffff ;
-    --bs-btn-bg: var(--color-SeaweedGreen) ;
+.btn-doggy {
+    --bs-btn-color: #6e6702;
+    --bs-btn-bg: #6e6702;
     --bs-btn-border-color: none ;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: var(--color-SeaweedGreen) ;
-    --bs-btn-hover-border-color: #6e6702 ;
+    --bs-btn-hover-border-color: var(--color-SeaweedGreen);
     --bs-btn-focus-shadow-rgb: 49, 132, 253;
-    --bs-btn-active-color: #fff;
+    --bs-btn-active-color: var(--color-SeaweedGreen);
     --bs-btn-active-bg: var(--color-Bronze) ;
     --bs-btn-active-border-color: var(--color-SeaweedGreen);
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
