26e commit beginf of final Functionnality with JS

--- a/style.css
+++ b/style.css
@@ -196,23 +196,28 @@ ul.ovale-navigation {
     background-color: var(--color-Bronze);
 }
 
+ul.ovale-navigation-alt {
+    background-color: var(--Lime);
+}
+
 a.color-white-link {
     color: #ffffff;
     padding: 15px;
     margin: 10px;
     /* font-size: 10px;  */
 }
+
 /* Animation Image via JS */
-.button-click {
+/* .button-click { */
 /* content:'image/Chien langue & non langue picto.png' */
 
-background-image: url('image/Chien langue & non langue picto.png'); 
+/* background-image: url('image/Chien langue Scroll Top.png');  */
 /* Image de remplacement */
 
-display: none;
+/* display: none; */
 /* Pour Teste */
 
-}
+/* } */
 
 /* .button-click:hover img{
 background-image: url('image/Chien langue & non langue picto.png');
@@ -220,19 +225,11 @@ height: 70px;
 width: 120px;
 }  */
 
-div .call-function-changeDog {
-    background-image: url("image/Chienlangue&nonlanguepictoalt.png");
-}
-
-div .call-function-changeDog.active {
-    background-image: url("image/Chien langue Scroll Top.png");
-}
-
 
 /* Main */
-
 /* Section 0 Présentation et histoire,
 de l'association */
+
 .bg-1 {
     background-color: var(--color-Goldenrod);
     color: #ffffff;
@@ -272,10 +269,10 @@ de l'association */
 
 /* Section 3 Contact */
 .bg-3 {
-    color: #ffffff;
+    color: #000000;
 }
 .bg-3-alt {
-    color: #ffffff;
+    color: #000000;
 }
 /* Bouton Primary Personnalisé */
 
@@ -300,8 +297,6 @@ de l'association */
 
 /* Footer */
 
-
-
 .bg-4 {
     background-color: var(--color-Bark);
     color: #ffffff;
@@ -310,6 +305,7 @@ de l'association */
     background-color: var(--Forest-Green);
     color: #ffffff;
 }
+
 /* scrolltop */
 .btn-scrolltop {
     cursor: pointer;
@@ -379,16 +375,25 @@ margin-bottom: 20px;
 }
 
 /* Scrollbar personnalisé */
+
+
 ::-webkit-scrollbar {
-    width: 20px;
+    width: 15px;
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--color-SeaweedGreen);
+    background-color: var(--color-SeaweedGreen);
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-Bronze);
 }
 
-::-webkit-scrollbar-thumb {
-    background: var(--color-Bronze);
+::-webkit-scrollbar-track-alt {
+    background: var(--Grass);
+}
+
+::-webkit-scrollbar-thumb-alt {
+    background: var(--Lime);
 }
 
 /*# sourceMappingURL=style.css.map */
