--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root,
-[data-bs-theme=light] {
+[data-theme="autumn"] {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1;
