--- a/style.css
+++ b/style.css
@@ -257,24 +257,39 @@ de l'association */
 }
 /* Bouton Primary Personnalisé */
 
-.btn-doggy {
+.btn-doggy-alt {
     --bs-btn-color: #6e6702;
     --bs-btn-bg: #6e6702;
     --bs-btn-border-color: none ;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: var(--color-SeaweedGreen) ;
+    --bs-btn-hover-bg: var(--Grass) ;
+    --bs-btn-hover-border-color: var(--Grass);
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: var(--Grass);
+    --bs-btn-active-bg: var(--Lime) ;
+    --bs-btn-active-border-color: var(--Grass);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--Grass);
+    --bs-btn-disabled-border-color: var(--Grass);
+}
+
+.btn-doggy {
+    --bs-btn-color: #6e6702;
+    --bs-btn-bg: #6e6702;
+    --bs-btn-border-color: none;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--color-SeaweedGreen);
     --bs-btn-hover-border-color: var(--color-SeaweedGreen);
     --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: var(--color-SeaweedGreen);
-    --bs-btn-active-bg: var(--color-Bronze) ;
+    --bs-btn-active-bg: var(--color-Bronze);
     --bs-btn-active-border-color: var(--color-SeaweedGreen);
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: var(--color-SeaweedGreen);
     --bs-btn-disabled-border-color: var(--color-SeaweedGreen);
 }
-
-
 
 /* Footer */
 
