--- a/style.css
+++ b/style.css
@@ -187,12 +187,6 @@ body {
         }
 
 
-/* .bg-site {
-        background-color: #db9501;
-            color: #ffffff;
-} */
-
-
 /* First Page */
 
 
@@ -307,6 +301,25 @@ de l'association */
     --bs-btn-disabled-bg: var(--color-SeaweedGreen);
     --bs-btn-disabled-border-color: var(--color-SeaweedGreen);
 }
+
+/* End First page */
+
+/* --------------------------------------------------------- */
+
+
+/* Second page */
+
+/* Main */
+
+/* Section #0 Illustration/Photographie de l'évènement */
+
+/* Article */
+
+/* Section #1 Détail de l'évènement */
+
+/* End of Second page */
+
+/* ---------------------------------------------------------- */
 
 
 /* Footer */
