--- a/style.css
+++ b/style.css
@@ -149,6 +149,82 @@
 
 }
 
+:root,
+[data-bs-theme=autumn] {
+    --bs-body-color: #adb5bd;
+    --bs-body-color-rgb: 173, 181, 189;
+    --bs-body-bg: #212529;
+    --bs-body-bg-rgb: 33, 37, 41;
+    --bs-emphasis-color: #f8f9fa;
+    --bs-emphasis-color-rgb: 248, 249, 250;
+    --bs-secondary-color: rgba(173, 181, 189, 0.75);
+    --bs-secondary-color-rgb: 173, 181, 189;
+    --bs-secondary-bg: #343a40;
+    --bs-secondary-bg-rgb: 52, 58, 64;
+    --bs-tertiary-color: rgba(173, 181, 189, 0.5);
+    --bs-tertiary-color-rgb: 173, 181, 189;
+    --bs-tertiary-bg: #2b3035;
+    --bs-tertiary-bg-rgb: 43, 48, 53;
+    --bs-emphasis-color: #fff;
+    --bs-primary-text: #6ea8fe;
+    --bs-secondary-text: #dee2e6;
+    --bs-success-text: #75b798;
+    --bs-info-text: #6edff6;
+    --bs-warning-text: #ffda6a;
+    --bs-danger-text: #ea868f;
+    --bs-light-text: #f8f9fa;
+    --bs-dark-text: #dee2e6;
+    --bs-primary-bg-subtle: #031633;
+    --bs-secondary-bg-subtle: #212529;
+    --bs-success-bg-subtle: #051b11;
+    --bs-info-bg-subtle: #032830;
+    --bs-warning-bg-subtle: #332701;
+    --bs-danger-bg-subtle: #2c0b0e;
+    --bs-light-bg-subtle: #343a40;
+    --bs-dark-bg-subtle: #1a1d20;
+    --bs-primary-border-subtle: #084298;
+    --bs-secondary-border-subtle: #495057;
+    --bs-success-border-subtle: #0f5132;
+    --bs-info-border-subtle: #055160;
+    --bs-warning-border-subtle: #664d03;
+    --bs-danger-border-subtle: #842029;
+    --bs-light-border-subtle: #495057;
+    --bs-dark-border-subtle: #343a40;
+    --bs-heading-color: #fff;
+    --bs-link-color: #6ea8fe;
+    --bs-link-hover-color: #9ec5fe;
+    --bs-link-color-rgb: 110, 168, 254;
+    --bs-link-hover-color-rgb: 158, 197, 254;
+    --bs-code-color: #e685b5;
+    --bs-border-color: #495057;
+    --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
+
+    /* Autumn Part - Warm Naturals*/
+    /* Bark bg-4 & btn-scrolltop*/
+    --color-Bark: #2e2300;
+    /* Seaweed Green bg-2*/
+    --color-SeaweedGreen: #6e6702;
+    /* Bronze bg-0*/
+    --color-Bronze: #C05805;
+    /* Goldenrod bg-1*/
+    --color-Goldenrod: #db9501;
+    /* bg-modal-1*/
+    --color-modal: #917741;
+
+
+    /* Spring Part - Outdoorsy & Natural*/
+    /* Forest Green bg-4-alt & btn-scrollDown*/
+    --Forest-Green: #2e4600;
+    /* Grass bg-2-alt*/
+    --Grass: #486b00;
+    /* Lime bg-0-alt*/
+    --Lime: #a2c523;
+    /* spring-green bg-1-alt*/
+    --Earth: #89da59;
+    /* bg-modal-1-alt*/
+    --color-modal-alt: #eecd85;
+}
+
 /* Global Color, use for entierly project */
 body {
 
@@ -217,6 +293,37 @@ a.color-white-link {
     /* font-size: 10px;  */
 }
 
+li.a.nav-link {
+    /* display: ; */
+    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+    font-size: var(--bs-nav-link-font-size);
+    font-weight: var(--bs-nav-link-font-weight);
+    color: var(--bs-nav-link-color);
+    text-decoration: none;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
+}
+
+/* jQuery function on button */
+/* Autunm */
+
+/* .changeDog{
+    display: block;
+    width: 32px;
+    height: 32px;
+    height: auto;
+    background: url("image/Chienlangue&nonlanguepictoalt.png");
+} */
+
+.langue {
+background-image: url('image/Chien langue Scroll Top.png');
+display: none;
+}
+
+/* Spring */
+.langue-alt {
+background-image: url('image/Chien langue & non langue picto alt spring.png');
+}
+
 /* Main */
 /* Section 0 Présentation et histoire,
 de l'association */
@@ -255,6 +362,8 @@ de l'association */
     background-color: var(--Grass);
     color: #ffffff;
 }
+
+
 
 /* Article */
 
