--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@
 }
 
 :root,
-[data-bs-theme=autumn] {
+[data-theme=autumn] {
     --bs-body-color: #adb5bd;
     --bs-body-color-rgb: 173, 181, 189;
     --bs-body-bg: #212529;
@@ -293,6 +293,8 @@ a.color-white-link {
     /* font-size: 10px;  */
 }
 
+/* NavBar */
+
 li.a.nav-link {
     /* display: ; */
     padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
@@ -319,26 +321,21 @@ border-radius: 50%;
 border-color: var(--Earth);
 }
 
-/* jQuery function on button */
-/* Autunm */
+@media only screen and (max-width: 1050px) and (min-width: 992px) {
+  .nav-item:nth-child(4) {
+  }
+  
+    .navbar-nav .nav-item:last-child a p {
+    position: absolute;
+    bottom: 0;
+    left: 56%;
 
-/* .changeDog{
-    display: block;
-    width: 32px;
-    height: 32px;
-    height: auto;
-    background: url("image/Chienlangue&nonlanguepictoalt.png");
-} */
-
-.langue {
-background-image: url('image/Chien langue Scroll Top.png');
-display: none;
+  }
 }
 
-/* Spring */
-.langue-alt {
-background-image: url('image/Chien langue & non langue picto alt spring.png');
-}
+
+
+
 
 /* Main */
 /* Section 0 Présentation et histoire,
@@ -431,7 +428,6 @@ de l'association */
 
 /* --------------------------------------------------------- */
 
-
 /* Second page */
 
 /* Main */
@@ -462,7 +458,7 @@ de l'association */
 .btn-scrolltop {
     cursor: pointer;
     z-index: 100;
-    /*Z index inférieur en scrollDown, à 1000, pour ne pas se cumuler, parfois en 
+    /*Z index inférieur en scrollDown, pour ne pas se cumuler, parfois en 
     rafraichissant la page, uniquement besoin du scrollDown, en haut, et comme quand on 
     rafraichie la page, on arrive directement en haut.*/
     position: fixed;
@@ -478,7 +474,7 @@ de l'association */
 
 .btn-scrollDown {
     cursor: pointer;
-    z-index: 1000;
+    z-index: 101;
     position: fixed;
     bottom: 10px;
     width: 100px;
@@ -549,3 +545,4 @@ margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
+
