--- a/style.css
+++ b/style.css
@@ -540,17 +540,18 @@ margin-bottom: 20px;
 ::-webkit-scrollbar-track {
     background-color: var(--color-SeaweedGreen);
 }
+.webkit-scrollbar-track-alt {
+    background-color: var(--color-Grass);
+}
+
 ::-webkit-scrollbar-thumb {
     background-color: var(--color-Bronze);
 }
 
-::-webkit-scrollbar-track-alt {
-    background: var(--Grass);
+.webkit-scrollbar-thumb-alt {
+    background-color: var(--color-Lime);
 }
 
-::-webkit-scrollbar-thumb-alt {
-    background: var(--Lime);
-}
 
 /*# sourceMappingURL=style.css.map */
 
