--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    /* --bs-primary: #0d6efd; */
     --bs-primary: var(--color-SeaweedGreen) ;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
@@ -68,8 +67,8 @@
     --bs-black-rgb: 0, 0, 0;
     --bs-body-color-rgb: 33, 37, 41;
     --bs-body-bg-rgb: 255, 255, 255;
-    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --bs-font-sans-serif: system-ui, '-apple-system', "Segoe UI", 'Roboto', "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", monospace;
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
     --bs-body-font-family: var(--bs-font-sans-serif);
     --bs-body-font-size: 1rem;
@@ -229,6 +228,7 @@
 body { 
 
         min-width: 350px;
+        min-height: 250px;
     /* Autumn Part - Warm Naturals*/
         /* Bark bg-4 & btn-scrolltop*/
         --color-Bark: #2e2300;
@@ -540,7 +540,7 @@ margin-bottom: 20px;
 ::-webkit-scrollbar-track {
     background-color: var(--color-SeaweedGreen);
 }
-.webkit-scrollbar-track-alt {
+::-webkit-scrollbar-track-alt {
     background-color: var(--color-Grass);
 }
 
@@ -548,7 +548,7 @@ margin-bottom: 20px;
     background-color: var(--color-Bronze);
 }
 
-.webkit-scrollbar-thumb-alt {
+::-webkit-scrollbar-thumb-alt {
     background-color: var(--color-Lime);
 }
 
