🐛 FIX: Fix fond image

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -260,7 +260,7 @@ body {
         /* Background Website (Spring version)*/
         .bg-background-website-alt {
             background-color: var(--Grass);
-            background-image: url("/image/SVG/protruding-squares\ spring.svg");
+            background-image: url("/image/SVG/protruding-squares spring.svg");
         }
 
 
